[project]
name = "geminipool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "python-multipart>=0.0.20",
    "returns>=0.24.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.34.0",
]
